2010-07-15  Peter Schueller  <ps@kr.tuwien.ac.at>

	* Table-Concept.txt: More comments.
	* Modelbuilding-Concept.txt: Started writing concept
	for model representation (and later model building).

2010-07-15  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* Table-Concept.txt: Add some comments.
	Orgmode.
	* ID-Concept.txt: Likewise.

2010-07-13  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/dlvhex/Term.h: Update types of the primitives.
	* include/dlvhex/Atom.h: Likewise.

	* testsuite/TestTypes.cpp: Fix testsuite.
	* testsuite/Makefile.am: Likewise.

	* src/dlvhex/Makefile.am: Remove Atom.cpp and Term.cpp.
	* src/dlvhex/Atom.cpp: Likewise.
	* src/dlvhex/Term.cpp: Likewise.

	* Makefile.am: Add TestTypes test in testsuite.
	* configure.ac: Likewise.
	* testsuite/TestTypes.cpp: Likewise.
	* testsuite/Makefile.am: Likewise.

	* include/dlvhex/Term.h: Add new primitive types for the new AST.
	* include/dlvhex/SymbolTable.h: Likewise.
	* include/dlvhex/AtomTable.h: Likewise.
	* include/dlvhex/Atom.h: Likewise.
	* include/dlvhex/Makefile.am: Likewise.

	* include/dlvhex/NamesTable.h: Remove.

2010-07-09  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* README: Update dependency description.
	* MAINTAINER-README: Likewise.

	* NEWS: Update list of user-visible changes.

2010-07-08  Peter Schueller  <ps@kr.tuwien.ac.at>

	* examples/tests/dlvhextests.test: Added testcases for recently
	solved bugs.
	* examples/equality.hex: Likewise.
	* examples/tests/equality.out: Likewise.
	* examples/builtin_safety.hex: Likewise.
	* examples/tests/builtin_safety.out: Likewise.
	* examples/Makefile.am: Likewise.

	* src/dlvhex/PrintVisitor.cpp: Fix #succ rewriting (ticket #12).
	* src/dlvhex/Atom.cpp: Likewise.

	* src/dlvhex/SafetyChecker.cpp: Fix +,* safety checking (ticket #11 #13).

	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Fix == vs = as well
	as <> vs != builtin binary operator treatment (ticket #14).

2010-07-07  Peter Schueller  <ps@kr.tuwien.ac.at>
